[package]
name = "miniscript"
version = "2.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>"]
repository = "https://github.com/apoelstra/miniscript"
description = "Miniscript: a subset of Bitcoin Script designed for analysis"
license = "CC0-1.0"

[features]
compiler = []
trace = []
unstable = []
default = []

[dependencies]
elements = {git = "https://github.com/sanket1729/rust-elements/", branch = "elements_opcodes"}
bitcoin_hashes = "0.9.0"
bitcoin = "0.25.0"

[dependencies.serde]
version = "1.0"
optional = true

[[example]]
name = "htlc"
required-features = ["compiler"]

[[example]]
name = "parse"